# logic-sim-backends-rust

./: .gitmodules
.github/workflows/: ghpages
engine/: Cargo.toml
engine/src/: aoc.rs  bootstrap.rs  circuit.rs  clock_manager.rs  components.rs  lib.rs  main.rs  quine_mccluskey.rs  table.rs  types.rs  utils.rs
interface/: .gitignore  Cargo.toml  index.html
interface/src/: app.rs  component_ui.rs  consts.rs  display_elems.rs  draw_conns.rs  lib.rs  main.rs  path_find.rs  path_finder.rs  state_handler_threads.rs  state_handlers.rs  top_bar.rs  update_ops.rs  utils.rs
interface/src/logic_units/: mod.rs
