[package]
name = "ui_elems_logic_simulator"
version = "0.1.0"
authors = ["Kislay Udbhav Verma <kislayuv27@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4"
bsim_engine = { path = "../engine" }
pratt-parser-rs = { path = "../pratt-parser-rs" }

[lib]
name = "ui_elems_logic_simulator"
path = "src/lib.rs"